2023-01-04  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/memmap.h: The function "KernAux_Memmap_Builder_add" has been
	changed.
	* include/kernaux/multiboot2.h: The function
	"KernAux_Multiboot2_Info_to_memmap_builder" has been renamed to
	"KernAux_Multiboot2_Info_to_memmap", it's signature has been changed.

2022-12-27  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Package "--with[out]-libc" has been removed

2022-12-23  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.7.0 released