@@ -4,7 +4,8 @@
 	changed.
 	* include/kernaux/multiboot2.h: The function
 	"KernAux_Multiboot2_Info_to_memmap_builder" has been renamed to
-	"KernAux_Multiboot2_Info_to_memmap", it's signature has been changed.
+	"KernAux_Multiboot2_Info_build_memmap_from_memmap", it's signature has been
+	changed.
 
 2022-12-27  Alex Kotov  <kotovalexarian@gmail.com>
 
